# Cloud-Scale-Digital-Twin-for-Autonomous-Robots

./: Dockerfile  LICENSE  README.md  docker-compose.yml
gazebo_worlds/: multi_robot_world.sdf
gazebo_worlds/robots/: robot3.urdf.xacro
k8s/: deployment.yaml  ingress.yaml  service.yaml
launch/: digital_twin.launch.py  multi_robot.launch.py  rl_navigation.launch.py
ros2_packages/digital_twin_core/: CMakeLists.txt  package.xml
ros2_packages/digital_twin_core/ros2_packages/digital_twin_core/digital_twin_core/: anomaly_detection.py  sensor_stream.py  twin_sync.py
ros2_packages/multi_robot_orchestrator/: CMakeLists.txt  package.xml
ros2_packages/multi_robot_orchestrator/ros2_packages/multi_robot_orchestrator/orchestrator/: fleet_manager.py  task_scheduler.py
ros2_packages/rl_navigation/: CMakeLists.txt  package.xml
ros2_packages/rl_navigation/ros2_packages/rl_navigation/rl_agent/: agent.py  train.py
web_dashboard/: README.md
web_dashboard/backend/: app.py  requirements.txt
web_dashboard/frontend/: package.json
web_dashboard/frontend/src/: App.jsx
web_dashboard/frontend/src/components/: RobotStatus.jsx  SensorData.jsx  TaskScheduler.jsx
