<?xml version="1.0"?>
<package format="3">
  <name>digital_twin_core</name>
  <version>0.1.0</version>
  <description>Real-time digital twin core for autonomous robots</description>
  <maintainer email="atharsh@example.com">Atharsh S.</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry
