<?xml version="1.0"?>
<package format="3">
  <name>rl_navigation</name>
  <version>0.1.0</version>
  <description>Reinforcement Learning agent for autonomous robot navigation</description>
  <maintainer email="atharsh@example.com">Atharsh S.</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>digital_twin_core</depend>
</package>
